--- a/src/assets/sass/_utils.scss
+++ b/src/assets/sass/_utils.scss
@@ -130,6 +130,14 @@
   }
 }
 
+.flex-row {
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
+}
+
 
 .position {
   &-relative {
