--- a/src/assets/sass/custom.scss
+++ b/src/assets/sass/custom.scss
@@ -172,7 +172,7 @@ body .nl-page {
   .menu {
     width: 100vw;
     height: 100vh;
-    background-color: $gray-100;
+    background-color: $gray-500;
     flex-direction: column;
     display: none;
     position: fixed;
